--- a/Myfirstspringboot-JPA2/pom.xml
+++ b/Myfirstspringboot-JPA2/pom.xml
@@ -62,6 +62,11 @@
 			<artifactId>jstl</artifactId>
 			<version>1.2</version>
 		</dependency>
+		<dependency>
+            <groupId>com.github.librepdf</groupId>
+            <artifactId>openpdf</artifactId>
+            <version>1.3.8</version>
+        </dependency>
 	</dependencies>
 
 	<build>
