--- a/Myfirstspringboot-JPA2/src/main/resources/application.properties
+++ b/Myfirstspringboot-JPA2/src/main/resources/application.properties
@@ -7,4 +7,4 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql=true
 spring.jpa.database=mysql
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL55Dialect
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create-drop
